--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
