--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "dnd-kit": "^0.0.2",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
     "react": "^18",
