--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
