--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "dnd-kit": "^0.0.2",
+    "js-cookie": "^3.0.5",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -21,6 +22,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
